@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+    (c) https://github.com/MontiCore/monticore
+
+    The license generally applicable for this project
+    can be found under https://github.com/MontiCore/monticore.
+
+-->
 <!-- (c) https://github.com/MontiCore/monticore -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -47,6 +55,9 @@
                     <useSystemClassLoader>false</useSystemClassLoader>
                     <!-- Set root directory to ensure same execution context in subprojects (e.g. for Log in test mode) -->
                     <workingDirectory>${project.parent.basedir}</workingDirectory>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                 </configuration>
             </plugin>
         </plugins>
